2017-09-24  Bruno Haible  <bruno@clisp.org>

	Talk about Cygwin, not Cygwin32.
	* lispbibl.d (UNIX_CYGWIN): Renamed from UNIX_CYGWIN32.
	* constsym.d, error.d, genclisph.d, pathname.d, socket.d, spvw.d,
	spvw_sigsegv.d, stream.d, subr.d, unix.d, unixaux.d, execname.c: Update.
	* _distmakefile, _clisp.c: Likewise.
	* modules/syscalls/calls.c: Likewise.
	* modules/berkeley-db/bdb.c: Likewise.
	* modules/dirkey/dirkey.c: Likewise.
	* m4/closedir.m4: Update comment.

2017-09-24  Bruno Haible  <bruno@clisp.org>

	Extend porting documentation.
	* unix/PLATFORMS: Add section about address space layout.

2017-09-24  Bruno Haible  <bruno@clisp.org>

	Fix g++ -std=gnu++11 "invalid suffix on literal" warnings.
	* constobj.d (O(command_shell)): Put a space between literal string and
	token that expands to some strings.
	* built.d (built_flags): Likewise.

2017-09-24  Bruno Haible  <bruno@clisp.org>

	Fix build failure with "g++ -std=gnu++11" and libffcall 2.0.
	* foreign.d (cast_to_callback_t): New macro.
	(free_foreign_callin, convert_function_from_foreign): Use it.

2017-09-20  Bruno Haible  <bruno@clisp.org>

	Improve code structure.
	* clhs.lisp: Reorder functions.

2017-09-20  Bruno Haible  <bruno@clisp.org>

	Remove unused code.
	* clhs.lisp (read-from-file): Remove function.
	(start-message): Move from here...
	* modules/libsvm/libsvm.lisp (start-message): ... to here.

2017-09-20  Bruno Haible  <bruno@clisp.org>

	Retrieve the CLHS symbol map in one step, in most cases.
	* clhs.lisp (ensure-clhs-map): Use the domain name as a guidance which
	map file name to try.

2017-09-19  Bruno Haible  <bruno@clisp.org>

	Avoid build failure in clx/new-clx module in WIDE_SOFT model.
	Reported and fix proposed by Sébastien Villemot in
	<https://sourceforge.net/p/clisp/patches/51/>.
	The cause is that export_def is not 100% hygienic: It outputs a
	definition with all occurring macros pre-expanded. Therefore the macro
	argument names must be different from all identifiers that may be